--- a/index.html
+++ b/index.html
@@ -179,70 +179,59 @@
     {
       "day": "Day 1",
       "exercises": [
-        {
-          "name": "Barbell Bench Press",
-          "sets": 4,
-          "reps": "8-10",
-          "image": "barbell-bench-press.jpg"
-        },
-        {
-          "name": "Incline Dumbbell Press",
-          "sets": 3,
-          "reps": "10-12",
-          "image": "incline-dumbbell-press.jpg"
-        },
-        {
-          "name": "Push-Ups",
-          "sets": 3,
-          "reps": "15-20",
-          "image": "push-ups.jpg"
-        }
+        { "name": "Bicycle", "sets": 1, "reps": "20 minutes", "image": "bicycle.jpg" },
+        { "name": "Abs", "sets": 1, "reps": "20 minutes", "image": "abs.jpg" },
+        { "name": "HIIT Training", "sets": 2, "reps": "20", "image": "hiit-training.jpg" },
+        { "name": "Wide Grip Lat Pull Down", "sets": 3, "reps": "12", "image": "widegrip-latpulldown.jpg" },
+        { "name": "Cross Grip Lat Pull Down", "sets": 3, "reps": "10", "image": "crossgrip-latpulldown.jpg" },
+        { "name": "Cable Row", "sets": 3, "reps": "10", "image": "cable-row.jpg" },
+        { "name": "Low Cable Row", "sets": 4, "reps": "12", "image": "low-cable-row.jpg" },
+        { "name": "Back Extension", "sets": 4, "reps": "15", "image": "back-extension.jpg" },
+        { "name": "Dumbbell Pull Over", "sets": 4, "reps": "12", "image": "dumbbell-pull-over.jpg" },
+        { "name": "Cable Incline Flyes", "sets": 3, "reps": "12", "image": "cable-incline-flyes.jpg" },
+        { "name": "Machine Incline Press", "sets": 3, "reps": "10", "image": "machine-incline-press.jpg" },
+        { "name": "Dumbbell Bench Press", "sets": 4, "reps": "10", "image": "dumbbell-bench-press.jpg" },
+        { "name": "Cable Crossover", "sets": 3, "reps": "12", "image": "cable-crossover.jpg" },
+        { "name": "Machine Decline Press", "sets": 3, "reps": "12", "image": "machine-decline-press.jpg" },
+        { "name": "Barbell Lying Down", "sets": 4, "reps": "10", "image": "barbell-lying-down.jpg" },
+        { "name": "Reverse Grip Press Down", "sets": 3, "reps": "10", "image": "reversegrip-pressdown.jpg" },
+        { "name": "Bicycle", "sets": 1, "reps": "10 minutes", "image": "bicycle.jpg" }
       ]
     },
     {
       "day": "Day 2",
       "exercises": [
-        {
-          "name": "Barbell Squat",
-          "sets": 4,
-          "reps": "8-10",
-          "image": "barbell-squat.jpg"
-        },
-        {
-          "name": "Leg Press",
-          "sets": 3,
-          "reps": "12-15",
-          "image": "leg-press.jpg"
-        },
-        {
-          "name": "Walking Lunges",
-          "sets": 3,
-          "reps": "20 steps",
-          "image": "walking-lunges.jpg"
-        }
+        { "name": "Bicycle", "sets": 1, "reps": "20 minutes", "image": "bicycle.jpg" },
+        { "name": "Abs", "sets": 1, "reps": "20 minutes", "image": "abs.jpg" },
+        { "name": "HIIT Training", "sets": 2, "reps": "20", "image": "hiit-training.jpg" },
+        { "name": "Leg Extension", "sets": 3, "reps": "10", "image": "leg-extension.jpg" },
+        { "name": "Smith Machine Squat", "sets": 3, "reps": "10", "image": "smith-squat.jpg" },
+        { "name": "Leg Press (Bottom)", "sets": 3, "reps": "10", "image": "leg-press-bottom.jpg" },
+        { "name": "Leg Curl", "sets": 3, "reps": "10", "image": "leg-curl.jpg" },
+        { "name": "Smith Front Press", "sets": 4, "reps": "8", "image": "smith-front-press.jpg" },
+        { "name": "Dumbbell Side Lateral", "sets": 3, "reps": "10", "image": "dumbbell-side-lateral.jpg" },
+        { "name": "Hammer Bar Pull Down Front", "sets": 3, "reps": "10", "image": "hammer-bar-pulldown.jpg" },
+        { "name": "Smith Machine Back", "sets": 3, "reps": "8", "image": "smith-machine-back.jpg" },
+        { "name": "Dumbbell Shrug", "sets": 3, "reps": "10", "image": "dumbbell-shrug.jpg" },
+        { "name": "Barbell Curl", "sets": 4, "reps": "8", "image": "barbell-curl.jpg" },
+        { "name": "Machine Curl", "sets": 3, "reps": "10", "image": "machine-curl.jpg" },
+        { "name": "Wrist Curl", "sets": 3, "reps": "10", "image": "wrist-curl.jpg" },
+        { "name": "Bicycle", "sets": 1, "reps": "10 minutes", "image": "bicycle.jpg" }
       ]
     },
     {
       "day": "Day 3",
       "exercises": [
-        {
-          "name": "Pull-Ups",
-          "sets": 4,
-          "reps": "6-8",
-          "image": "pull-ups.jpg"
-        },
-        {
-          "name": "Barbell Deadlift",
-          "sets": 4,
-          "reps": "6-8",
-          "image": "barbell-deadlift.jpg"
-        },
-        {
-          "name": "Seated Cable Row",
-          "sets": 3,
-          "reps": "10-12",
-          "image": "seated-cable-row.jpg"
-        }
+        { "name": "Bicycle", "sets": 1, "reps": "20 minutes", "image": "bicycle.jpg" },
+        { "name": "Upper Twisting", "sets": 1, "reps": "500", "image": "upper-twisting.jpg" },
+        { "name": "Side Twisting", "sets": 1, "reps": "500", "image": "side-twisting.jpg" },
+        { "name": "Dumbbell Side Up Down", "sets": 1, "reps": "500", "image": "dumbbell-side-updown.jpg" },
+        { "name": "Down Leg Raise", "sets": 1, "reps": "300-500", "image": "down-leg-raise.jpg" },
+        { "name": "Sit Up", "sets": 1, "reps": "300-500", "image": "sit-up.jpg" },
+        { "name": "Bend Over Twisting", "sets": 1, "reps": "500-1000", "image": "bend-over-twisting.jpg" },
+        { "name": "HIIT Training", "sets": 3, "reps": "20-40", "image": "hiit-training.jpg" },
+        { "name": "Bicycle", "sets": 1, "reps": "20 minutes", "image": "bicycle.jpg" },
+        { "name": "Treadmill", "sets": 1, "reps": "20 minutes", "image": "treadmill.jpg" }
       ]
     }
   ]
@@ -351,7 +340,7 @@
                                 <div class="flex items-start space-x-4">
                                     <div class="flex-shrink-0">
                                         <div class="w-24 h-24 bg-gradient-to-br from-blue-100 to-purple-100 rounded-xl flex items-center justify-center">
-                                            <span class="text-4xl">${isCompleted ? '✅' : '💪'}</span>
+                                            <span class="text-4xl">${isCompleted ? '✅' : `<img src="images/${exercise.image}" alt="💪" class="w-full h-full object-cover rounded-xl" />`}</span>
                                         </div>
                                     </div>
                                     <div class="flex-1 min-w-0">
